[project]
name = "auditing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "equinox>=0.13.2",
    "jax>=0.8.1",
    "jax-meta>=1.0.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]
